<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#59B2DC"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_white"
            android:padding="3dp">

            <EditText
                android:id="@+id/et_postbox"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/postbox"
                android:textColor="#888888"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_white"
            android:padding="3dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/name"
                android:textColor="#888888"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_white"
            android:padding="3dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/password"
                android:textColor="#888888"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_white"
            android:padding="3dp">

            <EditText
                android:id="@+id/et_comfirming"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/confirming_name"
                android:textColor="#888888"
                android:textSize="20sp" />
        </FrameLayout>

        <Button
            android:id="@+id/m_register"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_yellow"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_existing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/existing"
            android:textColor="#101010"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>