<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/ic__bg"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:padding="3dp"
            android:background="@drawable/button_white"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ed_postbox"
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/postbox"
                android:textColor="#888888"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:layout_height="40dp"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:padding="3dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_white"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/password"
                android:textColor="#888888"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:layout_height="40dp" />
        </FrameLayout>
        <Button
            android:id="@+id/m_login"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_yellow"
            android:text="@string/login"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_height="46dp" />
        <TextView
            android:id="@+id/tv_forgetting"
            android:layout_width="wrap_content"
            android:text="@string/forgetting"
            android:textColor="#101010"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/m_register"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_yellow"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>