<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_blue">

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/schedule_activity_icon_calendar" />

            <Spinner
                android:id="@+id/spin_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:layout_toEndOf="@+id/calendar"
                android:layout_toRightOf="@+id/calendar"
                android:entries="@array/year"
                android:prompt="@string/year_title"
                android:spinnerMode="dropdown"></Spinner>

            <Spinner
                android:id="@+id/spin_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:layout_toEndOf="@+id/spin_year"
                android:layout_toRightOf="@+id/spin_year"
                android:entries="@array/month"
                android:prompt="@string/month_title"
                android:spinnerMode="dropdown"></Spinner>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_blue"
            android:orientation="horizontal">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle_btn"
                android:text="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle_btn"
                android:text="2" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle_btn"
                android:text="3" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle_btn"
                android:text="4" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle_btn"
                android:text="5" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle_btn"
                android:text="6" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle_btn"
                android:text="7" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/schedule_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/add_schedule"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/schedule_recyclerview"
                android:layout_centerHorizontal="true"
                android:src="@drawable/schedule_add_btn_add"/>

            <Button
                android:id="@+id/creat_schedule"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/creat_schedule_btn"
                android:text="@string/creat_schedule"
                android:textColor="#FFFFFF"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
